# staffingagent-reconciliation

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
dashboard/: hitl_dashboard.html
data/: ats_bullhorn_records.csv  vms_records.csv
src/: __init__.py  agent.py  compliance.py  llm_reasoner.py  matcher.py  normalizer.py  output_writer.py  scorer.py  state.py
tests/: test_basic.py
